--- a/Shop.html
+++ b/Shop.html
@@ -48,9 +48,7 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="Payment.html#features3-6"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Payment</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="Payment.html#features3-6"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="Payment.html#features3-6"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Payment</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="Shop.html#services1-b"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></li></ul>
             
         </div>
     </nav>
