--- a/index.html
+++ b/index.html
@@ -48,15 +48,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="Payment.html#features3-6"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Payment</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="Shop.html#services1-b"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="Payment.html#features3-6"><span class="mbri-cash mbr-iconfont mbr-iconfont-btn"></span>Payment</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="#top"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="Shop.html#services1-b"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Shop</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -162,7 +160,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5CieYZQ9WWSYnXzHXJ65uViNxPCtS4XZYgHs4WVj3LuJSjBhLTEP2TlMu/RZqZDaWdXgZ8SliSddriz2NGo0n6S7iomKkf3FhQJyMcqFCFujqJPP4bWjseu1H1jtWpiO">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kkHy+xOKc+BrdtaXY4HA7p5JBLr+wjYV2Xkv9Odlzg78tI/NnPcUPN/LmaifKzgpahZv/sVYUOKCbNGyEi1WksFnVd77RdKVFQcSBTaKF0jamaxjxZIfsrvpQ6Cykg9E">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
