create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -157,7 +157,7 @@
     </div>
 </section>
 
-<script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="75"></script><script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="75"></script>
+<script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="17"></script><script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="17"></script>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
