--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -156,8 +156,6 @@
         </div>
     </div>
 </section>
-
-<script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="42"></script><script data-ad-client="ca-pub-3406774777269487" async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" class="cid-rJZDrVPW6V" id="custom-html-f" data-rv-view="42"></script>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
