create github pages

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -128,7 +128,7 @@
                     </div>
                     <div class="plan-body">
                         <p class="mbr-text mbr-fonts-style display-7">In This You Can Develope Your Own Website For Your Youtube Channel,Schools,Buissnes<br></p>
-                        <div class="mbr-section-btn pt-4 text-center"><a href="https://wa.me/9931503430" class="btn btn-primary display-4">BUY NOW</a></div>
+                        <div class="mbr-section-btn pt-4 text-center"><a href="https://wa.me/+919931503430" class="btn btn-primary display-4">BUY NOW</a></div>
                     </div>
                 </div>
             </div>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="plan-body ">
                         <p class="mbr-text mbr-fonts-style display-7">Make Any Type Of Your Website<br>However Or Whichever Type Of You Want And Unlimted Edit</p>
-                        <div class="mbr-section-btn pt-4 text-center"><a href="https://wa.me/9931503430" class="btn btn-primary display-4">BUY NOW</a></div>
+                        <div class="mbr-section-btn pt-4 text-center"><a href="https://wa.me/+919931503430" class="btn btn-primary display-4">BUY NOW</a></div>
                     </div>
                 </div>
             </div>
